going through random styles again

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -62,8 +62,8 @@ blockquote .language-python {
     display: inline;
     overflow-y: visible ;
     width: fit-content;
-    background: rgba(144, 162, 252, 0.30196078);
-    color: #209ec4;
+    background: rgba(170, 181, 241, 0.30196078);
+    color: #3297b5;
     padding: 2px 6px;
     border-radius: 2px;
     font-weight: 600;
