--- a/src/less/post.less
+++ b/src/less/post.less
@@ -590,10 +590,16 @@
 			}
 
 			* {
-				font-family: Gilroy-Regular,sans-serif;
+				font-family: 'Gilroy-Regular',sans-serif;
+				font-weight: 500;
 				font-style: normal;
 				line-height: 1.6;
 			}
+
+			a {
+				font-weight: 600 !important;
+			}
+
 			@media(max-width: 600px) {
 				margin: 20px auto;
 			}
@@ -1015,6 +1021,7 @@
 	}
 
 	.author-card-large {
+		 justify-content: left !important;
 		@media(max-width: 600px) {
 			display: none;
 		}
