--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -76,11 +76,11 @@
   }
 
   .sql {
-    color: #7277F4 !important;
+    color: #6874a5!important;
     background-color: #d2dce6;
 
     * {
-      color: #7277F4 !important;
+      color: #6874a5!important;
     }
   }
 
