--- a/partials/author-card.hbs
+++ b/partials/author-card.hbs
@@ -65,6 +65,51 @@
 </div>
 
 <script>
+
+function PopulateAuthorDetails(user) {
+  var author = user.slug;
+
+  if (user['title']) {
+    $("." + author).find('.title').html(user['title'].toString());
+  }
+
+  if (user['facebook']) {
+    $("." + author).find('.facebook').children().attr('href', 'https://facebook.com/' + user['facebook'].toString());
+    $("." + author).find('.facebook').css('display', 'block');
+  }
+
+  if (user['linkedin']) {
+    $("." + author).find('.linkedin').children().attr('href', 'https://linkedin.com/in/' + user['linkedin']);
+    $("." + author).find('.linkedin').css('display', 'block');
+  }
+
+  if (user['twitter']) {
+    $("." + author).find('.twitter').children().attr('href', 'https://twitter.com/' + user['twitter']);
+    $("." + author).find('.twitter').css('display', 'block');
+  }
+
+  if (user['quora']) {
+    $("." + author).find('.quora').children().attr('href', 'https://quora.com/profile/' + user['quora']);
+    $("." + author).find('.quora').css('display', 'block');
+  }
+
+  if (user['pocket']) {
+    $("." + author).find('.pocket').children().attr('href', 'https://getpocket.com/' + user['pocket']);
+    $("." + author).find('.pocket').css('display', 'block');
+  }
+
+  if (user['github']) {
+    $("." + author).find('.github').children().attr('href', 'https://github.com/' + user['github']);
+    $("." + author).find('.github').css('display', 'block');
+  }
+
+  if (user['medium']) {
+    $("." + author).find('.medium').children().attr('href', 'https://hackingandslacking.com/' + user['medium']);
+    $("." + author).find('.medium').css('display', 'block');
+  }
+}
+
+
 function AuthorDetails(user) {
   $.ajax({
     method: "GET",
@@ -75,6 +120,8 @@ function AuthorDetails(user) {
     },
     contentType: 'application/json'
   }).done(function(results) {
+    PopulateAuthorDetails(user)
+    //$('.author-card-small').find('.' + user.slug).
     console.log(results);
   });
 }
@@ -94,51 +141,9 @@ $.get(ghost.url.api('users')).done(function (data){
 
 </script>
 <!--<script>
-  client.callFunction("FullAuthorDetails").then(result => {
 
-    for (var i = 0; i < result.length; i++) {
-      var authorObj = result[i];
-      console.log('plain authorObj = ' + authorObj);
-      var author = authorObj['author'];
-      console.log("authorObj['title'] = " + authorObj['title']);
-      if (authorObj['title']) {
-        $("." + author).find('.title').html(authorObj['title'].toString());
-      }
+      var author = user['author'];
+      console.log("user['title'] = " + user['title']);
 
-      if (authorObj['facebook']) {
-        $("." + author).find('.facebook').children().attr('href', 'https://facebook.com/' + authorObj['facebook'].toString());
-        $("." + author).find('.facebook').css('display', 'block');
-      }
-
-      if (authorObj['linkedin']) {
-        $("." + author).find('.linkedin').children().attr('href', 'https://linkedin.com/in/' + authorObj['linkedin']);
-        $("." + author).find('.linkedin').css('display', 'block');
-      }
-
-      if (authorObj['twitter']) {
-        $("." + author).find('.twitter').children().attr('href', 'https://twitter.com/' + authorObj['twitter']);
-        $("." + author).find('.twitter').css('display', 'block');
-      }
-
-      if (authorObj['quora']) {
-        $("." + author).find('.quora').children().attr('href', 'https://quora.com/profile/' + authorObj['quora']);
-        $("." + author).find('.quora').css('display', 'block');
-      }
-
-      if (authorObj['pocket']) {
-        $("." + author).find('.pocket').children().attr('href', 'https://getpocket.com/' + authorObj['pocket']);
-        $("." + author).find('.pocket').css('display', 'block');
-      }
-
-      if (authorObj['github']) {
-        $("." + author).find('.github').children().attr('href', 'https://github.com/' + authorObj['github']);
-        $("." + author).find('.github').css('display', 'block');
-      }
-
-      if (authorObj['medium']) {
-        $("." + author).find('.medium').children().attr('href', 'https://hackingandslacking.com/' + authorObj['medium']);
-        $("." + author).find('.medium').css('display', 'block');
-      }
-    }
   });
 </script>-->
