--- a/partials/author-card.hbs
+++ b/partials/author-card.hbs
@@ -114,7 +114,7 @@ function AuthorDetails(user) {
   var slug = user.slug;
   $.ajax({
     method: "GET",
-    url: "https://apisentris.com/api/v1/users?slug="+ String(slug).eq,
+    url: "https://apisentris.com/api/v1/users?slug="+ eq.slug,
     headers: {
       client_id: "115000",
       access_token: "qWLp79NWuDtVxom5v6_h_g"
@@ -126,8 +126,6 @@ function AuthorDetails(user) {
     console.log(results);
   });
 }
-
-
 
 $.get(ghost.url.api('users')).done(function (data){
   console.log('users', data.users);
