--- a/partials/author-card.hbs
+++ b/partials/author-card.hbs
@@ -65,80 +65,79 @@
 </div>
 
 <script>
+  function PopulateAuthorDetails(users) {
+    for (var i = 0; i < users.length; i++) {
+      var user = users[i];
+      var author = user.slug;
 
-function PopulateAuthorDetails(user) {
-  var author = user.slug;
+      if (user.title) {
+        $("." + author).find('.title').html(user['title'].toString());
+      }
 
-  if (user['title']) {
-    $("." + author).find('.title').html(user['title'].toString());
-  }
+      if (user.facebook) {
+        $("." + author).find('.facebook').children().attr('href', 'https://facebook.com/' + user['facebook'].toString());
+        $("." + author).find('.facebook').css('display', 'block');
+      }
 
-  if (user['facebook']) {
-    $("." + author).find('.facebook').children().attr('href', 'https://facebook.com/' + user['facebook'].toString());
-    $("." + author).find('.facebook').css('display', 'block');
-  }
+      if (user.linkedin) {
+        $("." + author).find('.linkedin').children().attr('href', 'https://linkedin.com/in/' + user['linkedin']);
+        $("." + author).find('.linkedin').css('display', 'block');
+      }
 
-  if (user['linkedin']) {
-    $("." + author).find('.linkedin').children().attr('href', 'https://linkedin.com/in/' + user['linkedin']);
-    $("." + author).find('.linkedin').css('display', 'block');
-  }
+      if (user.twitter) {
+        $("." + author).find('.twitter').children().attr('href', 'https://twitter.com/' + user['twitter']);
+        $("." + author).find('.twitter').css('display', 'block');
+      }
 
-  if (user['twitter']) {
-    $("." + author).find('.twitter').children().attr('href', 'https://twitter.com/' + user['twitter']);
-    $("." + author).find('.twitter').css('display', 'block');
-  }
+      if (user.quora) {
+        $("." + author).find('.quora').children().attr('href', 'https://quora.com/profile/' + user['quora']);
+        $("." + author).find('.quora').css('display', 'block');
+      }
 
-  if (user['quora']) {
-    $("." + author).find('.quora').children().attr('href', 'https://quora.com/profile/' + user['quora']);
-    $("." + author).find('.quora').css('display', 'block');
-  }
+      if (user.pocket) {
+        $("." + author).find('.pocket').children().attr('href', 'https://getpocket.com/' + user['pocket']);
+        $("." + author).find('.pocket').css('display', 'block');
+      }
 
-  if (user['pocket']) {
-    $("." + author).find('.pocket').children().attr('href', 'https://getpocket.com/' + user['pocket']);
-    $("." + author).find('.pocket').css('display', 'block');
-  }
+      if (user.github) {
+        $("." + author).find('.github').children().attr('href', 'https://github.com/' + user['github']);
+        $("." + author).find('.github').css('display', 'block');
+      }
 
-  if (user['github']) {
-    $("." + author).find('.github').children().attr('href', 'https://github.com/' + user['github']);
-    $("." + author).find('.github').css('display', 'block');
-  }
-
-  if (user['medium']) {
-    $("." + author).find('.medium').children().attr('href', 'https://hackingandslacking.com/' + user['medium']);
-    $("." + author).find('.medium').css('display', 'block');
-  }
-}
-
-
-function AuthorDetails() {
-  $.ajax({
-    method: "GET",
-    url: "https://apisentris.com/api/v1/users",
-    headers: {
-      client_id: "115000",
-      access_token: "qWLp79NWuDtVxom5v6_h_g"
-    },
-    contentType: 'application/json'
-  }).done(function(results) {
-    for (var i = 0; i < results.length; i++){
-      PopulateAuthorDetails(results[i]);
+      if (user.medium) {
+        $("." + author).find('.medium').children().attr('href', 'https://hackingandslacking.com/' + user['medium']);
+        $("." + author).find('.medium').css('display', 'block');
+      }
     }
-    console.log(results);
-  });
-}
-AuthorDetails();
-/*
-$.get(ghost.url.api('users')).done(function (data){
-  console.log('users', data.users);
-  for (var i = 0; i < data.users.length; i++){
-      AuthorDetails(data.users[i]);
-      console.log('user deets = ' + data.users[i]);
   }
-}).fail(function (err){
-  console.log(err);
-});
-*/
 
+
+  function AuthorDetails() {
+    $.ajax({
+      method: "GET",
+      url: "https://apisentris.com/api/v1/users",
+      headers: {
+        client_id: "115000",
+        access_token: "qWLp79NWuDtVxom5v6_h_g"
+      },
+      contentType: 'application/json'
+    }).done(function(results) {
+      PopulateAuthorDetails(results);
+      console.log(results);
+    });
+  }
+  AuthorDetails();
+  /*
+  $.get(ghost.url.api('users')).done(function (data){
+    console.log('users', data.users);
+    for (var i = 0; i < data.users.length; i++){
+        AuthorDetails(data.users[i]);
+        console.log('user deets = ' + data.users[i]);
+    }
+  }).fail(function (err){
+    console.log(err);
+  });
+  */
 </script>
 <!--<script>
 
