--- a/src/less/author-card.less
+++ b/src/less/author-card.less
@@ -16,15 +16,15 @@
   }
 
   .author {
-    font-size: 1.2em;
+    font-size: 1.4em;
     margin-bottom: 0;
     line-height: 1;
     color: #326671;
   }
 
   .title {
-    font-size: 14px;
-    font-family: Gilroy-Regular;
+    font-size: font-size: 1.4em;;
+    font-family: 'Gilroy-Regular';
     /* font-weight: 600; */
     color: #326671;
     margin-bottom: 10px !important;
@@ -40,7 +40,7 @@
 
   span {
     color: #56585f;
-    font-size: 1.1em;
+    font-size: 1.2em;
   }
 
   .author-specs {
@@ -181,7 +181,7 @@
     box-shadow: 0 4px 2px -2px rgba(20, 24, 53, 0.15);
     background: linear-gradient(-15deg, rgba(255, 255, 255, .1) 100px ,transparent 0), linear-gradient(15deg, rgba(255, 255, 255, .1) 100px ,transparent 0),linear-gradient(-15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(15deg, rgba(255, 255, 255, .1) 300px ,transparent 0),linear-gradient(0deg, #749BE1 150px, #9267C7);
 
-    
+
   }
 }
 
