--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -180,7 +180,10 @@
 
 .contributors {
 	.contributor-container {
-		margin-top: 20px;
+
+		@media(max-width: 600px) {
+			margin: 20px auto;
+			}
 
 		.single-author {
 			display: flex;
