--- a/src/less/tag-page.less
+++ b/src/less/tag-page.less
@@ -139,6 +139,10 @@
         align-items: left;
         min-height: 150px;
 
+        @media(max-width: 600px){
+          min-height: 0;
+        }
+
         h2 {
           color: #4d4a5e;
           font-family: 'ProductSans-Regular';
