--- a/src/less/author-card.less
+++ b/src/less/author-card.less
@@ -23,9 +23,8 @@
   }
 
   .title {
-    font-size: font-size: 1.4em;;
+    font-size: 1.4em;
     font-family: 'Gilroy-Regular';
-    /* font-weight: 600; */
     color: #326671;
     margin-bottom: 10px !important;
   }
