--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -4,7 +4,7 @@
   <script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
   <script src="{{asset "/js/lightbox.js"}}"></script>
   {{#has author="Matt Alhonte"}}
-    <script async src="{{asset "/js/includes/previews.js"}}"></script>
+    <script async src="{{asset "/js/previews.js"}}"></script>
   {{/has}}
 {{/is}}
 <script src="{{asset "/js/main.min.js"}}"></script>
