--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -2,11 +2,14 @@
 {{#is "post"}}
   <script src="{{asset "/js/includes/scrollbooster.min.js"}}"></script>
   <script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
-  <script src="{{asset "/js/lightbox.js"}}"></script>
+  <script async src="{{asset "/js/lightbox.js"}}"></script>
   {{#has author="Matt Alhonte"}}
-    <script async src="{{asset "/js/previews.js"}}"></script>
+    <script src="{{asset "/js/previews.js"}}"></script>
   {{/has}}
+{{else}}
+  <script async src="{{asset "/js/includes/ghost-search.min.js"}}"></script>
 {{/is}}
-<script src="{{asset "/js/main.min.js"}}"></script>
-<script src="{{asset "/js/includes/ghost-search.min.js"}}"></script>
+
+<script async src="{{asset "/js/main.min.js"}}"></script>
+
 <!-- End Scripts -->
