--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -2,7 +2,7 @@
 @import "mixin.less";
 
 .link-preview {
-  padding: 15px 20px;
+  padding: 10px 15px;
   transition: all 0.2s ease-out;
   border-radius: 2px;
   margin: 20px auto 30px;
@@ -29,10 +29,7 @@
   }
 
   .link-preview-image {
-    max-width: 250px;
-    min-width: 250px;
-    margin-right: 30px;
-    background-color: white;
+
 
     @media(max-width: 600px) {
       min-width: none;
@@ -46,6 +43,9 @@
       display: block;
       width: 100%;
       height: auto;
+      max-height: 200px;
+      max-width: 250px;
+      margin-right: 30px;
     }
   }
 
@@ -92,7 +92,7 @@
     width: 100%;
     line-height: 1;
     font-weight: 100;
-    position: absolute;
+    position: relative;
     bottom: 0;
     @media(max-width: 600px) {
       font-size: 12px;
@@ -110,7 +110,7 @@
     position: relative;
 
     .title-desktop {
-      margin: 0 0 20px!important;
+      margin: 10px 0 10px!important;
       font-family: ProductSans-Medium,Gilroy-SemiBold,serif;
       font-size: 1.3em;
       line-height: 1.3;
@@ -136,7 +136,7 @@
     &:hover {
       cursor: pointer;
     }
-    @media(max-width: 800px) {
+    @media(max-width: 600px) {
       padding: 10px;
       display: block;
     }
