--- a/src/less/linkpreview.less
+++ b/src/less/linkpreview.less
@@ -27,8 +27,9 @@
 
   .detail-stack {
     position: relative;
-    min-width: -webkit-fill-available;
+    width: -webkit-fill-available;
     max-width: -webkit-fill-available;
+    overflow: hidden;
   }
 
   .link-preview-image {
@@ -116,7 +117,7 @@
 
     .title-desktop {
       margin: 10px 0 10px!important;
-      font-family: ProductSans-Medium,Gilroy-SemiBold,serif;
+      font-family: 'ProductSans-Regular',Gilroy-SemiBold,serif;
       font-size: 1.3em;
       line-height: 1.3;
       text-align: left;
