responsive table improvements

--- a/src/less/article-preview.less
+++ b/src/less/article-preview.less
@@ -17,10 +17,6 @@
     border-bottom: 2px solid #dcdcdc!important;
     display: flex;
 
-    h5 {
-      font-weight: 500;
-    }
-
     a {
       display: flex;
       justify-content: space-between;
@@ -57,6 +53,11 @@
     font-size: 1.2em !important;
     margin-top: 0 !important;
     min-height: 69px;
+    font-weight: 500;
+
+    @media(max-width: 600px) {
+      font-size: 1.1em !important;
+    }
   }
 
   .author-mobile {
