--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -171,6 +171,11 @@
 			text-transform: Uppercase;
 			transition: all 0.3s ease-out;
 
+			&:hover {
+				background: @hover-color;
+				box-shadow: 2px 2px 3px 0 #239084;
+			}
+
 			span {
 				font-size: 14px;
 			}
