--- a/src/less/global.less
+++ b/src/less/global.less
@@ -28,10 +28,12 @@ header {
 
 article {
 
-	p {
+	p,
+	li {
 		line-height: 1.7em;
 		font-size: 16px;
 		font-display: block;
+		font-family: 'Gilroy-Medium';
 	}
 }
 
