--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -66,21 +66,12 @@
     }
   }
 
-  .mysql {
-    color: #7277F4 !important;
-    background-color: lighten(#7277F4, 45%);
-
-    * {
-      color: #7277F4 !important;
-    }
-  }
-
   .sql {
-    color: #6874a5!important;
+    color: #687ea5 !important;
     background-color: #d2dce6;
 
     * {
-      color: #6874a5!important;
+      color: #687ea5 !important;
     }
   }
 
@@ -149,7 +140,7 @@
 
   .googlecloud {
     color: #1990f5 !important;
-    background-color: lighten(#1990f5, 40%);
+    background-color: lighten(#1990f5, 30%);
 
     * {
       color: #1990f5 !important;
@@ -158,7 +149,7 @@
 
   .mysql {
     color: #7a588e !important;
-    background-color: lighten(#7a588e, 50%);
+    background-color: lighten(#7a588e, 30%);
 
     * {
       color: #7a588e !important;
