--- a/src/less/kanban.less
+++ b/src/less/kanban.less
@@ -93,9 +93,8 @@
 
     h1 {
       margin: 10px 0 30px;
-      color:@h1-color;
-      font-weight:500;
-
+      color: @h1-color;
+      font-weight: 500;
       @media(max-width: 800px) {
         margin: 30px 0 0;
       }
@@ -131,9 +130,8 @@
       border-radius: 5px;
       box-shadow: 2px 3px 4px rgba(58, 59, 103, 0.1);
       overflow: hidden;
-
       @media(max-width:600px) {
-        margin: 0 5% 50px!important;
+        margin: 0 5% 50px!important !important;
         max-width: 90% !important;
         width: 90% !important;
       }
@@ -206,7 +204,7 @@
         /*max-width: 90%;*/
       }
       @media(max-width:600px) {
-        margin: 0 5% 50px!important;
+        margin: 0 5% 50px!important !important;
         max-width: 90% !important;
       }
 
@@ -258,7 +256,7 @@
           }
 
           h5 {
-            font-size: .9em;
+            font-size: 0.9em;
             font-family: 'Gilroy-Regular';
             color: #3c3d46;
             line-height: 1.2;
@@ -344,6 +342,10 @@
               }
 
               .priority {
+                i {
+                  font-weight: 900;
+                }
+
                 &.Highest {
                   color: red;
                 }
