removed async from search, added lazy-loading

--- a/error.hbs
+++ b/error.hbs
@@ -22,7 +22,7 @@ header {
   position: relative;
   min-width: 100%;
   height: 900px;
-  background: url(http://www.reactiongifs.us/wp-content/uploads/2015/04/nothing_to_see_here_naked_gun.gif) no-repeat center center fixed;
+  background: url(https://www.reactiongifs.us/wp-content/uploads/2015/04/nothing_to_see_here_naked_gun.gif) no-repeat center center fixed;
   background-size: cover;
   background-color: #000;
   opacity: 1;
