--- a/partials/share_links.hbs
+++ b/partials/share_links.hbs
@@ -13,6 +13,6 @@
 	</li>
 	<!-- Y Combinator -->
 	<li class="btn ycombinator">
-		<a href="javascript:window.location=%22http://news.ycombinator.com/submitlink?u=%22+encodeURIComponent(document.location)+%22&t=%22+encodeURIComponent(document.title)"><i class="fab fa-y-combinator"></i><span>hackernews</span></a>
+		<a href="javascript:window.location=%22https://news.ycombinator.com/submitlink?u=%22+encodeURIComponent(document.location)+%22&t=%22+encodeURIComponent(document.title)"><i class="fab fa-y-combinator"></i><span>hackernews</span></a>
 	</li>
 </ul>
