--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -46,7 +46,7 @@ function createAccount(){
 </script>-->
 
 <div id="signup" style="visibility:hidden;">
-  <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 700">
+  <svg id="logo" xmlns="https://www.w3.org/2000/svg" viewBox="0 0 96 700">
     <g id="logoGroup" transform="translate(120 232)">
       <path id="halfCircle" d="M-103.4-218.4c-15.2 16.7-14.7 42.5 1.4 58.6 16.6 16.6 43.5 16.6 60.1 0 16.1-16.1 16.6-42 1.4-58.6" fill="none" stroke="#fff" stroke-width="10" />
       <div id="thunder"></div>
