--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -1,4 +1,4 @@
-@import "variables.less";
+@import "../global/variables.less";
 /*====================================================
 	Tag page & author page cover
 ====================================================*/
