--- a/src/less/githubcard.less
+++ b/src/less/githubcard.less
@@ -1,5 +1,5 @@
-@import "variables.less";
-@import "mixin.less";
+@import "global/variables.less";
+@import "global/mixin.less";
 
 .author-template {
   #github-card-author {
@@ -17,7 +17,7 @@
     overflow: hidden;
     padding: 10px 14px 0;
     min-height: 135px;
-    
+
     @media(max-width: 800px) {
       padding: 10px;
     }
