--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -5,7 +5,9 @@
 	padding: 0 !important;
 	box-shadow: @shadow-color;
 	margin-bottom: 40px;
+	background: white;
 	transition: all 0.3s ease-out;
+	
 	@media(max-width:800px) {
 		margin-bottom: 30px;
 	}
