--- a/src/less/posts/postheader.less
+++ b/src/less/posts/postheader.less
@@ -1,5 +1,5 @@
-@import "variables.less";
-@import "mixin.less";
+@import "../global/variables.less";
+@import "../global/mixin.less";
 
 .post-navbar {
   display:none;
