--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -1,42 +1,52 @@
 /*====================================================
 	Importing less files
 ====================================================*/
-@import "variables.less";
-@import "mixin.less";
-@import "code.less";
-@import "author.less";
-@import "global.less";
-@import "footer.less";
-@import "menu.less";
-@import "post.less";
-@import "postfooter.less";
-@import "postpreview.less";
-@import "variables.less";
-@import "customtemplates.less";
-@import "linkpreview.less";
-@import "widgets.less";
-@import "pagination.less";
-@import "page.less";
-@import "postheader.less";
-@import "postlist.less";
-@import "tags.less";
+/* Global Styles */
+@import 'global/variables.less';
+@import 'global/mixin.less';
+@import 'global/global.less';
+@import 'global/footer.less';
+@import 'global/menu.less';
+@import 'global/fontawesome.less';
+@import 'global/fonts.less';
+@import 'global/widgets.less';
+@import 'global/searchbar.less';
+@import 'global/pagination.less';
+@import 'global/tags.less';
+@import 'global/author-card.less';
+@import 'global/postlist.less';
+@import 'global/postpreview.less';
+@import 'global/layout.less';
+@import 'global/social.less';
+
+/* Post Styles */
+@import 'posts/code.less';
+@import 'posts/redis.less';
+@import 'posts/postheader.less';
+@import 'posts/post.less';
+@import 'posts/linkpreview.less';
+@import 'posts/lightbox.less';
+@import 'posts/postfooter.less';
+@import 'posts/table.less';
+@import 'posts/article-preview.less';
+
+/* Page Styles */
+@import 'pages/page.less';
+@import 'pages/author.less';
+@import 'pages/repos.less';
+@import 'pages/about-page.less';
+@import 'pages/tag-page.less';
+@import 'pages/projects-page.less';
+@import 'pages/customtemplates.less';
+
+/* Unknown */
 @import 'githubcard.less';
-@import 'social.less';
 @import 'swiper.less';
-@import 'transactional.less';
-@import 'table.less';
-/*@import 'comments.less';*/
-@import 'signup.less';
-@import 'author-card.less';
-@import 'fonts.less';
-@import 'lightbox.less';
-@import 'searchbar.less';
-@import 'fontawesome.less';
-@import 'repos.less';
-@import 'redis.less';
-@import 'about-page.less';
-@import 'tag-page.less';
-@import 'projects-page.less';
+
+/* Not used */
+/*@import 'archive/transactional.less';
+@import 'archive/signup.less';
+*/
 
 /*====================================================
 	about author and comment and next-prev link
