fixed link previews

--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -238,6 +238,7 @@
 				display: block;
 				font-family: 'Gilroy-Regular';
 				font-size: 0.8em;
+				line-height: 1.2;
 				margin-top: 6px;
 			}
 		}
