--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -7,7 +7,7 @@
 	margin-bottom: 40px;
 	background: white;
 	transition: all 0.3s ease-out;
-	
+
 	@media(max-width:800px) {
 		margin-bottom: 30px;
 	}
@@ -313,7 +313,7 @@
 			&.author-mobile {
 				span {
 					font-family: 'Gilroy-SemiBold','Gilroy-Regular';
-					color: #627d90;
+					color: #4e6473;
 					line-height: 1;
 					overflow: hidden;
 					white-space: nowrap;
