--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -252,6 +252,12 @@
 		border-bottom: 0;
 		border-left: 5px solid #c8dec8;
 		background: #ecf1ec;
+
+		@media(max-width: 800px) {
+			 margin: 30px 35px 60px;
+		}
+
+
 		@media(max-width: 600px) {
 			padding: 15px 20px;
 			margin: 25px 30px 30px;
@@ -297,7 +303,7 @@
 				line-height: 1.3!important;
 			}
 			@media (max-width: 600px) {
-				font-size: 0.8em;
+				font-size: 0.9em;
 				text-align: justify;
 				line-height: 1.5 !important;
 				font-style: normal;
