tag page style errors

--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -13,6 +13,7 @@
 
       .content {
         padding: 20px;
+        position: relative;
       }
     }
 
@@ -20,7 +21,7 @@
       background-size: cover;
       background-position-y: center;
       height: 300px;
-      background-color: #305790;
+      background-color: #192e4c;
       background-blend-mode: soft-light;
       @media(max-width: 600px) {
         margin-left: calc(~"-50vw + 50%") !important;
