--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -79,6 +79,24 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@font-face {
+  font-family: 'AFParseGroteskMono-Regular';
+  font-style: normal;
+  src: local('AFParseGroteskMono-Regular'), local('AFParseGroteskMono-Regular'), url("../../assets/fonts/AFParseGroteskMono-Regular.woff2") format('woff2');
+}
+
+@font-face {
+  font-family: 'AFParseGroteskMono-Light';
+  font-style: normal;
+  src: local('AFParseGroteskMono-Light'), local('AFParseGroteskMono-Light'), url("../../assets/fonts/AFParseGroteskMono-Light.woff2") format('woff2');
+}
+
+@font-face {
+  font-family: 'AFParseGroteskMono-Bold';
+  font-style: normal;
+  src: local('AFParseGroteskMono-Bold'), local('AFParseGroteskMono-Bold'), url("../../assets/fonts/AFParseGroteskMono-Bold.woff2") format('woff2');
+}
+
 
 @font-face {
   font-family: "dm";
