--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -66,7 +66,7 @@ blockquote .language-python {
     border-radius: 2px;
     font-weight: 600;
     font-size: .9em;
-    font-family: dm;
+    font-family: 'AFParseGroteskMono-Regular';
   }
 
   code {
@@ -90,7 +90,7 @@ blockquote .language-python {
     padding: 0 25px 20px;
     white-space: pre-wrap;
     color: #d3dce0;
-    font-family: 'dm';
+    font-family: 'AFParseGroteskMono-Regular';
     @media(max-width: 600px) {
       padding: 0 20px 20px;
     }
@@ -101,7 +101,7 @@ blockquote .language-python {
       position: relative;
       width: 104%;
       height: auto;
-      margin-bottom: 5px;
+      margin-bottom: 0;
       margin-left: -6%;
       padding: 8px 40px;
       font-family: 'Gilroy-Regular';
@@ -136,7 +136,6 @@ blockquote .language-python {
     background: linear-gradient(#2d4467,#1c2a40);
 
     &::before {
-      margin-bottom: 15px;
       width: 110%;
       height: auto;
       content: "Python";
@@ -227,7 +226,7 @@ blockquote .language-python {
     }
 
     &::before {
-      margin-bottom: 15px;
+      margin-bottom: 0;
       width: 110%;
       height: auto;
       content: "JSON";
@@ -285,7 +284,8 @@ blockquote .language-python {
     width: 110%;
   }
 
-  .hljs.sql {
+  .hljs.sql,
+  .language-sql {
     background-color: #22202f ;
     /*selection color*/
     .hljs span::selection,
@@ -372,7 +372,7 @@ blockquote .language-python {
     }
 
     &::before {
-      margin-bottom: 15px;
+      margin-bottom: 0;
       width: 110%;
       height: auto;
       content: "SQL";
@@ -464,7 +464,7 @@ blockquote .language-python {
     }
 
     &::before {
-      margin-bottom: 15px;
+      margin-bottom: 0;
       width: 110%;
       height: auto;
       content: "Vim";
@@ -480,7 +480,7 @@ blockquote .language-python {
   .hljs.ini,
   .language-ini {
     &::before {
-      margin-bottom: 15px;
+      margin-bottom: 0;
       width: 110%;
       height: auto;
       content: "ini";
@@ -525,7 +525,7 @@ blockquote .language-python {
     background: #272738 ;
 
     &::before {
-      margin-bottom: 15px;
+      margin-bottom: 0;
       width: 110%;
       height: auto;
       color: white;
@@ -571,7 +571,7 @@ blockquote .language-python {
       position: relative;
       width: 104%;
       height: auto;
-      margin-bottom: 15px;
+      margin-bottom: 0;
       margin-left: -6%;
       padding: 8px 40px;
       font-family: Gilroy-Regular;
@@ -696,7 +696,7 @@ blockquote .language-python {
     }
 
     &::before {
-      margin-bottom: 15px;
+      margin-bottom: 0;
       width: 110%;
       height: auto;
       content: "Javascript" ;
