SQL code snippet support

--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -156,6 +156,7 @@ blockquote .language-python {
     .string,
     .string {
       color: #93DCB8;
+      font-family: 'AFParseGroteskMono-Light';
     }
 
     .params {
@@ -176,7 +177,7 @@ blockquote .language-python {
     .title,
     .title {
       color: #ffd712;
-      font-weight: 700;
+      font-family: 'AFParseGroteskMono-Bold';
     }
 
     .attr,
@@ -198,7 +199,7 @@ blockquote .language-python {
 
     .keyword {
       color: #00b1d5;
-      font-weight: 600;
+      font-family: 'AFParseGroteskMono-Bold';
     }
 
     .function,
@@ -517,6 +518,7 @@ blockquote .language-python {
 
     .string {
       color: #d2c69e;
+      font-family: 'AFParseGroteskMono-Light';
     }
 
     .name {
@@ -689,6 +691,7 @@ blockquote .language-python {
 
     .string {
       color: #F4E39D;
+      font-family: 'AFParseGroteskMono-Light';
     }
 
     .attr {
@@ -794,6 +797,7 @@ blockquote .language-python {
 
   .string {
     color: #A3BE8C;
+    font-family: 'AFParseGroteskMono-Light';
   }
 
   .title {
@@ -847,6 +851,7 @@ blockquote .language-python {
 
   .meta-string {
     color: #A3BE8C;
+    font-family: 'AFParseGroteskMono-Light';
   }
 
   .attr {
