postgres tag style

--- a/default.hbs
+++ b/default.hbs
@@ -10,6 +10,7 @@
  	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	{{! Styles }}
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-LRlmVvLKVApDVGuspQFnRQJjkv0P7/YFrw84YYQtmYG4nK8c+M+NlmYDCv0rKWpG" crossorigin="anonymous">
 	{{! Scripts }}
 	<!--<script src="{{asset "/webpack/my-webpack.bundle.js"}}"></script>-->
 	<script async src="{{asset "/js/includes/jquery.min.js"}}"></script>
