--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -272,4 +272,13 @@
       color: #155a8b !important;
     }
   }
+
+  .postgres {
+    background: #a1a8d0;
+    color: #434267;
+
+    * {
+      color: #434267 !important;
+    }
+  }
 }
