--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -7,7 +7,7 @@
 @import 'global/global.less';
 @import 'global/footer.less';
 @import 'global/menu.less';
-@import 'global/fontawesome.less';
+/*@import 'global/fontawesome.less';*/
 @import 'global/fonts.less';
 @import 'global/widgets.less';
 @import 'global/searchbar.less';
