--- a/custom-python-reference.hbs
+++ b/custom-python-reference.hbs
@@ -35,7 +35,7 @@
       $('#python-table thead').append('<tr><th>issuetype_icon</th><th>issuetype</th><th>project</th><th>description</th><th>creator</th><th>priority_icon</th><th>priority</th><th>updated</th><th>status</th><th>summary</tr>');
       for (var i = 0; i < pythons.length; i++) {
         $('#python-table tbody').append('<tr> \n ' +
-          '<td><img src="' + pythons[i].issuetype_icon + '">"</td> \n' +
+          '<td><img src="' + pythons[i].issuetype_icon + '"></td> \n' +
           '<td>' + pythons[i].summary + '</td> \n' +
           '<td>' + pythons[i].description + '</td> \n' +
           '<td>' + pythons[i].epic_name + '"></div> \n' +
@@ -47,7 +47,7 @@
     function python() {
       $.ajax({
         method: "GET",
-        url: "https://apisentris.com/api/v1/jira_python",
+        url: "https://apisentris.com/api/v1/jira_python?select=issuetype_icon,summary,description&issuetype=eq.Python",
         headers: {
           client_id: "115000",
           access_token: "qWLp79NWuDtVxom5v6_h_g"
