--- a/custom-python-reference.hbs
+++ b/custom-python-reference.hbs
@@ -32,7 +32,7 @@
 <script>
   $(document).ready(function() {
     function populatePython(pythons, status) {
-      $('#python-table thead').append('<tr><th>issuetype_icon</th><th>issuetype</th><th>project</th><th>description</th><th>creator</th><th>priority_icon</th><th>priority</th><th>updated</th><th>status</th><th>summary</tr>');
+      $('#python-table thead').append('<tr><th>issuetype_icon</th><th>summary</th><th>description</th><th>status</th></tr>');
       for (var i = 0; i < pythons.length; i++) {
         $('#python-table tbody').append('<tr> \n ' +
           '<td><img src="' + pythons[i].issuetype_icon + '"></td> \n' +
@@ -47,7 +47,7 @@
     function python() {
       $.ajax({
         method: "GET",
-        url: "https://apisentris.com/api/v1/jira_python?select=issuetype_icon,summary,description&issuetype=eq.Python",
+        url: "https://apisentris.com/api/v1/jira_python?select=issuetype_icon,summary,description",
         headers: {
           client_id: "115000",
           access_token: "qWLp79NWuDtVxom5v6_h_g"
