--- a/custom-python-reference.hbs
+++ b/custom-python-reference.hbs
@@ -50,7 +50,7 @@
     function python() {
       $.ajax({
         method: "GET",
-        url: "https://apisentris.com/api/v1/jira_python?select=issuetype_icon,summary,description,issuetype&issuetype=eq.Python",
+        url: "https://apisentris.com/api/v1/jira_python?issuetype=eq.Python",
         headers: {
           client_id: "115000",
           access_token: "qWLp79NWuDtVxom5v6_h_g"
