--- a/custom-python-reference.hbs
+++ b/custom-python-reference.hbs
@@ -37,11 +37,11 @@
     function populatePython(pythons, status) {
       $('#python-table thead').append('<tr><th>issuetype_icon</th><th>summary</th><th>description</th><th>issuetype</th></tr>');
       for (var i = 0; i < pythons.length; i++) {
-        $('#python-table tbody').append('<tr> \n ' +
+        $('#python-table tbody').append('<tr class="' + pythons[i].issuetype + '"> \n ' +
           '<td><img src="' + pythons[i].issuetype_icon + '"></td> \n' +
           '<td>' + pythons[i].summary + '</td> \n' +
           '<td>' + pythons[i].description + '</td> \n' +
-          '<td>' + pythons[i].isuetype + '</td> \n' +
+          '<td>' + pythons[i].issuetype + '</td> \n' +
           '</tr>');
       }
     }
