--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -37,6 +37,7 @@
 @import 'pages/about-page.less';
 @import 'pages/tag-page.less';
 @import 'pages/projects-page.less';
+@import 'pages/python-page.less';
 @import 'pages/customtemplates.less';
 
 /* Unknown */
