--- a/src/less/pages/python-page.less
+++ b/src/less/pages/python-page.less
@@ -10,6 +10,16 @@
           text-align: center;
         }
 
+        .summmary {
+          font-weight: 600 !important;
+          font-size: .85em !important;
+        }
+
+        .issuetype-name {
+          font-size: .7em !important;
+          min-width: 100px;
+        }
+
         &.Epic {
           display: none;
         }
