--- a/custom-python-reference.hbs
+++ b/custom-python-reference.hbs
@@ -35,7 +35,7 @@
 <script>
   $(document).ready(function() {
     function populatePython(pythons, status) {
-      $('#python-table thead').append('<tr><th>issuetype_icon</th><th>summary</th><th>description</th><th>issuetype</th></tr>');
+      $('#python-table thead').append('<tr><th></th><th>summary</th><th>description</th><th>issuetype</th></tr>');
       for (var i = 0; i < pythons.length; i++) {
         $('#python-table tbody').append('<tr class="' + pythons[i].issuetype + '"> \n ' +
           '<td><img src="' + pythons[i].issuetype_icon + '"></td> \n' +
