--- a/src/less/pages/kanban.less
+++ b/src/less/pages/kanban.less
@@ -230,7 +230,7 @@
       }
 
       .cards {
-        width: 90%;
+        width: 93%;
         height: auto;
         display: flex;
         justify-content: space-between;
@@ -256,11 +256,12 @@
           }
 
           h5 {
-            font-size: 0.9em;
+            font-size: .93em;
+            line-height: 1.3;
+            text-transform: capitalize;
             font-family: 'Gilroy-Regular';
             color: #3c3d46;
-            line-height: 1.2;
-            margin: 5px 0 20px;
+            margin: 2px 0 20px;
             width: 99%;
           }
 
@@ -374,16 +375,19 @@
             .epic {
               border-radius: 4px;
               text-align: center;
+              display: flex;
+              align-items: center;
 
               i {
-                margin-right: 5px;
+                opacity: .7;
               }
 
               span {
-                color: #343434;
+                color: #7e7e7e;
                 font-size: 12px;
                 font-family: 'Gilroy-Regular';
-                margin-right: 5px;
+                margin-right: 7px;
+                line-height: 1;
               }
 
               &.Creative span,
