projects page tweaks

--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -40,15 +40,20 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			text-overflow: ellipsis;
-			font-family: 'Gilroy-Medium',sans-serif !important;
+			font-family: 'Gilroy-Regular',sans-serif !important;
 			line-height: 1.55;
 			font-size: 1em;
 			font-weight: 500;
 			color: #2d2f35;
+			margin-bottom: 25px;
 			@media(max-width: 600px) {
 				font-size: 0.9em;
 				line-height: 1.6em;
 				display: none;
+			}
+
+			a {
+				font-family: 'Gilroy-Medium',sans-serif !important;
 			}
 
 			* {
