--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -274,11 +274,11 @@
   }
 
   .postgres {
-    background: #a1a8d0;
-    color: #434267;
+    background: #a9b8d7;
+    color: #425167;
 
     * {
-      color: #434267 !important;
+      color: #425167 !important;
     }
   }
 }
