--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -2,7 +2,7 @@
 <script src="{{asset "/js/lazy-load.min.js"}}"></script>
 {{#is "post"}}
   <script src="{{asset "/js/includes/scrollbooster.min.js"}}"></script>
-  <script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
+  <script src="{{asset "/js/includes/highlight.pack.min.js"}}"></script>
   <script async src="{{asset "/js/lightbox.js"}}"></script>
   {{#has author="Matt Alhonte"}}
     <script src="{{asset "/js/previews.js"}}"></script>
