projects page tweaks

--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -60,13 +60,13 @@ blockquote .language-python {
     display: inline;
     overflow-y: visible ;
     width: fit-content;
-    background: rgba(170, 181, 241, 0.30196078);
+    background: rgba(183, 192, 237, 0.30196078);
     color: #3297b5;
-    padding: 2px 6px;
+    padding: 3px 6px;
     border-radius: 2px;
     font-weight: 600;
     font-size: .9em;
-    font-family: 'AFParseGroteskMono-Regular';
+    font-family: 'AFParseGroteskMono-Light';
   }
 
   code {
@@ -82,7 +82,7 @@ blockquote .language-python {
   .hljs {
     display: block;
     overflow-x: hidden;
-    background: linear-gradient(#2a2a4a,#1e1d29);
+    background: linear-gradient(#2d3555,#1d2036);
     overflow-wrap: break-word;
     margin: 0;
     font-weight: 200;
@@ -323,7 +323,7 @@ blockquote .language-python {
     .literal,
     .number,
     .symbol {
-      color: #cc6666;
+      color: #cebde3;
     }
     /*color: fg_green*/
     .addition,
@@ -332,7 +332,8 @@ blockquote .language-python {
     .selector-attr,
     .selector-pseudo,
     .string {
-      color: #87e8db;
+      color: #b0def0;
+      font-family: 'AFParseGroteskMono-Light';
     }
     /*color: fg_purple*/
     .attribute,
@@ -346,6 +347,7 @@ blockquote .language-python {
     .selector-tag,
     .tag {
       color: #79bbf3;
+      font-family: 'AFParseGroteskMono-Bold';
     }
     /*color: fg_aqua*/
     .subst,
@@ -361,7 +363,7 @@ blockquote .language-python {
     .section,
     .selector-class,
     .type {
-      color: #de935f;
+      color: #ddbd73;
     }
 
     .emphasis {
