apisentris author fixes

--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -1,5 +1,5 @@
 {{#author}}
-<div class="sidebar" class="{{id}}">
+<div class="sidebar" class="{{slug}}">
 	{{#if website}}
 		{{> widget-authorwebsite}}
 	{{/if}}
