--- a/partials/repos.hbs
+++ b/partials/repos.hbs
@@ -4,23 +4,9 @@
   /*===========================
      1. function declaretion
      ==========================*/
-  const repoClient = stitch.Stitch.initializeDefaultAppClient('githubrepos-bhnhv');
-  const repoDB = repoClient.getServiceClient(stitch.RemoteMongoClient.factory, 'mongodb-atlas').db('github');
 
-
-  repoClient.auth.loginWithCredential(new stitch.AnonymousCredential()).then(() =>
-    repoDB.collection('repos').find({}).asArray()
-  ).then(docs => {
+  function get_repos(){
     for (var i = 0; i < docs.length; i++) {
-      /*
-                  var cat = $.ajax({url: 'https://api.apify.com/v1/execs/kbHJtkiqZxHzLFqJ2/results?format=json&simplified=1',
-                    contentType: "application/json",
-                    dataType: 'jsonp',
-                    success: function(result){
-                      return result[0].value;
-                    }
-                  });
-      */
       $('.repos').append('<a href="' + docs[i].url + '"> \n' +
         '<div class="link-preview"> \n' +
         '<i class="fab fa-github"></i> \n' +
@@ -30,9 +16,8 @@
         '<p>' + docs[i].description + '</p> \n' +
         '</div></div></a>');
     }
-  }).catch(err => {
-    console.error(err)
-  });
+  }
+
 
   /*===========================
   2. Initialization
