chipping away at author page

--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -16,7 +16,7 @@
 		<span class="loaction"><i class="fal fa-map-marker-alt"></i>{{location}}</span>
 		{{/if}}
 		{{#if website}}
-		<span class="website"><i class="fal fa-globe"></i><a href="{{website}}" targer="_BLANK">{{t "Website"}}</a></span>
+		<span class="website"><a href="{{website}}" targer="_BLANK"><i class="fal fa-globe"></i> {{t "Website"}}</a></span>
 		{{/if}}
 		{{#if twitter}}
 		<span class="twitter"><a href="{{twitter_url}}"><i class="fab fa-twitter"></i> {{twitter}}</a></span>
