--- a/src/less/pages/author.less
+++ b/src/less/pages/author.less
@@ -231,7 +231,7 @@
 			margin: 0 !important;
 
 			.meta-info {
-				    margin-right: 15px;
+				   margin-right: 15px;
 			}
 		}
 
@@ -241,9 +241,14 @@
 		}
 
 		.bio {
-			font-size: .9em;
-			max-width: 450px;
+			max-width: 460px;
 			margin: 15px auto 0;
+			font-size: .9em;
+			color: #505050;
+			font-family: 'Gilroy-Medium',sans-serif;
+			line-height: 1.5em;
+			font-weight: 500;
+			font-size: .95em;
 		}
 	}
 
