--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -42,10 +42,6 @@
 		}
 	}
 
-	.post-count {
-		color: @text-color-light;
-	}
-
 	.post-excerpt {
 		 font-family: 'Gilroy-Regular';
 	}
@@ -61,7 +57,9 @@
 	}
 
 	.meta-info {
-		color: @text-color-light;
+		color: #65697c;
+		font-family: 'Gilroy-Light',sans-serif;
+		font-size: .9em;
 		display: flex;
 		justify-content: space-around;
 		width: 81%;
