added author widget to wrong partial

--- a/partials/author-sidebar.hbs
+++ b/partials/author-sidebar.hbs
@@ -6,7 +6,12 @@
 	{{> widget-github}}
 	{{> widget-medium}}
 	{{> widget-meetup}}
-	{{> widget-authortwitter}}
+	{{#has slug="todd"}}
+		<iframe src="https://feed.mikle.com/widget/v2/99948/" height="1100px" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
+	{{else}}
+		{{> widget-authortwitter}}
+	{{/has}}
+
 </div>
 {{/author}}
 
