fixing author for sure now

--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -2,13 +2,11 @@
 /*====================================================
 	Tag page & author page cover
 ====================================================*/
-
 .cover {
 	text-align: center;
 	background: white;
 	padding: 40px;
 	margin-bottom: 30px;
-
 	@media(max-width: 600px) {
 		margin-left: calc(~"-50vw + 50%") !important;
 		margin-right: calc(~"-50vw + 50%") !important;
@@ -30,20 +28,19 @@
 
 	.tag-description {
 		width: 80%;
-    margin: 0 auto;
+		margin: 0 auto;
 		text-align: 14px;
-
 		@media(max-width: 600px) {
 			width: 93%;
 			margin: 0 auto;
 			text-align: 14px;
-			font-size: .9em;
+			font-size: 0.9em;
 			line-height: 1.6;
 		}
 	}
 
 	.post-excerpt {
-		 font-family: 'Gilroy-Regular';
+		font-family: 'Gilroy-Regular';
 	}
 
 	h3 {
@@ -57,21 +54,19 @@
 	}
 
 	.meta-info {
-		color: #65697c;
 		font-family: 'Gilroy-Light',sans-serif;
-		font-size: .9em;
+		font-size: 0.9em;
 		display: flex;
 		justify-content: space-around;
 		width: 81%;
 		margin: auto;
-
-    @media(max-width: 600px) {
-      flex-direction: column;
-    }
+		@media(max-width: 600px) {
+			flex-direction: column;
+		}
 
 		span {
 			margin: 0 7px;
-			font-size: .9em;
+			font-size: 0.9em;
 
 			i {
 				margin-right: 7px;
