--- a/default.hbs
+++ b/default.hbs
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-LRlmVvLKVApDVGuspQFnRQJjkv0P7/YFrw84YYQtmYG4nK8c+M+NlmYDCv0rKWpG" crossorigin="anonymous">
 	{{! Scripts }}
 	<!--<script src="{{asset "/webpack/my-webpack.bundle.js"}}"></script>-->
-	<script async src="{{asset "/js/includes/jquery.min.js"}}"></script>
+	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
 	<script src="{{asset "/js/includes/retina.min.js"}}"></script>
 
 	{{#is "post"}}
