python code style meta color

--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -147,6 +147,11 @@ blockquote .language-python {
       position: relative;
     }
 
+    .meta {
+      color: rgba(255, 168, 168, 0.7294117647058823);
+      font-family: 'AFParseGroteskMono-Bold';
+    }
+
     .addition,
     .addition,
     .meta-string,
