--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -7,7 +7,6 @@
 	margin-bottom: 40px;
 	background: white;
 	transition: all 0.3s ease-out;
-
 	@media(max-width:800px) {
 		margin-bottom: 30px;
 	}
@@ -131,8 +130,6 @@
 				&:hover {
 					color: @secondary-color;
 				}
-
-
 				@media(max-width: 600px) {
 					font-family: 'ProductSans-Bold', 'Gilroy-Regular';
 					font-weight: 500;
@@ -323,14 +320,12 @@
 					overflow: hidden;
 					white-space: nowrap;
 					text-overflow: ellipsis;
-					transition: all .3s ease-out;
+					transition: all 0.3s ease-out;
 
 					&:hover {
 						cursor: pointer;
 					}
 				}
-
-
 			}
 
 			&.author {
@@ -428,7 +423,7 @@
 			display: none;
 			padding: 13px 18px;
 			font-size: 14px;
-			font-family: Gilroy-Regular,serif;
+			font-family: 'Gilroy-Regular',serif;
 		}
 	}
 }
