--- a/src/less/pages/page.less
+++ b/src/less/pages/page.less
@@ -58,6 +58,10 @@
 
   .post-title {
     margin: 40px 40px 10px;
+
+    @media(max-width: 600px) {
+      margin: 40px 30px 10px;
+    }
   }
 
   .main-header {
@@ -112,6 +116,10 @@
 
   p {
     margin: 0 auto 20px;
+
+    @media(max-width: 600px) {
+      margin: 0 30px 20px;
+    }
   }
   @media (max-width: 600px) {
     .main-footer {
