--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -30,7 +30,7 @@
 				width: auto;
 			}
 			@media(max-width: 600px) {
-				margin-bottom: 30px;
+				margin-bottom: 20px;
 			}
 		}
 	}
@@ -152,7 +152,6 @@
 			font-size: 1.3em;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.2em;
 			text-align: center;
 			line-height: 1.4;
 		}
@@ -1038,7 +1037,7 @@
 		display: none;
 		@media(max-width: 600px) {
 			display: block;
-			margin: 30px 30px 20px;
+			margin: 20px;
 			width: auto!important;
 		}
 	}
