--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -22,7 +22,7 @@
       </div>
     {{/has}}
 
-    <div class="{{post_class}} post-permalink">
+    <div class="post-permalink">
       <div class="meta">
         {{#primary_tag}}
             <span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> <span>{{name}}</span></span>
