series widget started

--- a/post.hbs
+++ b/post.hbs
@@ -4,6 +4,7 @@
 <section class="content-wrap">
 	<div class="container">
 			{{#post}}
+			{{> thisseries-widget}}
 				<!-- start main post area -->
 				<div class=" main-content">
 					<!-- start post -->
